# thrift-nano

./: .gitignore  CMakeLists.txt  README.md  build.sh
compiler/cpp/: CMakeLists.txt
compiler/cpp/src/generate/: t_c_nano_generator.cc  t_md_generator.cc
compiler/cpp/src/windows/: version.h
lib/c_nano/src/: CMakeLists.txt  config.h.in
lib/c_nano/src/mowgli/: alloc.c  alloc.h  allocation_policy.c  allocation_policy.h  allocator.c  bootstrap.c  bootstrap.h  class.h  heap.c  list.c  logger.c  logger.h  mowgli.h  mowgli_string.c  mowgli_string.h  mutex.c  mutex.h  object.c  object.h  stdinc.h
lib/c_nano/src/test/: example_gen.c  example_gen.h  protocol.c  protocol.h  struct.c  struct.h  test.c  test.thrift  test_serial.c  thrift_nano.h  thrift_types.h  transport.c  transport.h  types.c
lib/c_nano/src/test/gen-c_nano/: tn_package_name_test_types.c  tn_package_name_test_types.h
lib/c_nano/src/thrift/: mem.c  mem.h  protocol.c  protocol.h  struct.c  struct.h  thrift_nano.h  thrift_types.c  thrift_types.h  transport.c  transport.h  types.c  types.h
lib/c_nano/src/thrift-nano/: defs.h  init.c  init.h  machine.h  mem.c  mem.h  protocol.c  protocol.h  struct.c  struct.h  thrift_nano.h  transport.c  transport.h  types.c  types.h
lib/c_nano/src/thrift/c_nano/: struct.c  thrift_list.h  thrift_nano.c  thrift_nano.h  thrift_struct.c  thrift_struct.h  tn_binary_protocol.c  transport.h
lib/c_nano/src/thrift/c_nano/protocol/: thrift_protocol.h
lib/c_nano/src/thrift/c_nano/transport/: thrift_memory_buffer.c  thrift_memory_buffer.h  thrift_transport.c  thrift_transport.h
